tests/negative/path_traversal_dotdot.uzpp
// XATOLIK_KUTILMOQDA: path_traversal: parent traversal (..) yo'l
ulash "../../../etc/passwd"
butun asosiy() { qaytarish 0; }
